# mini-alphaevolve

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.codex/pr-prompts/: 01-contracts-and-jsonl-archive.md  02-restricted-candidate-dsl.md  03-toy-evaluator.md  04-saia-structured-mutator.md  05-evolution-controller.md  06-runs-resume-reproducibility.md  07-reporting-mvp-experiment.md  08-parallel-hpc-evaluation.md  09-python-policy-ast-sandbox.md  10-cartpole-programmatic-policy.md  11-ablations-quality-diversity.md  12-mujoco-extension.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: architecture.md
scripts/: load_saia_key.sh
src/mini_alphaevolve/: __init__.py  __main__.py  archive.py  cli.py  config.py  dsl.py  evaluator.py  evolution.py  exceptions.py  models.py  prompts.py  reporting.py  runs.py  saia_client.py  sandbox.py
src/minimal_alphaevolve/: __main__.py  archive.py  cli.py  config.py  evaluator.py  exceptions.py  models.py  prompts.py  saia_client.py
tests/: test_archive.py  test_cli.py  test_config.py  test_dsl.py  test_evaluator.py  test_evolution.py  test_load_saia_key.py  test_models.py  test_prompts.py  test_reporting.py  test_runs.py  test_saia_client.py  test_structured_mutator.py
