[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mini-alphaevolve"
version = "0.1.0"
description = "Minimal AlphaEvolve-style program evolution using GWDG SAIA"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Chunzhi Wu"}]
dependencies = [
  "httpx>=0.27,<1",
  "openai>=1.50,<3",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
]

[project.scripts]
minae = "mini_alphaevolve.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mini_alphaevolve"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mini_alphaevolve"]
mypy_path = "src"
